# qgen-tab-planner

./: .env.example  .gitignore  AI_AGENT_VISION.md  BANNER_FIX_README.md  CLAUDE.md  CROSSTAB_INTEGRATION.md  CROSSTAB_USAGE.md  METADATA_GUIDE.md  MODERN_ENHANCEMENTS.md  PHASE1_ASSESSMENT.md  README.md  README_CROSSTABS.md  RENDERING_PATTERNS.md  REPORTING_INTEGRATION.md  SHINY_CROSSTAB_GUIDE.md  START_BOTH_APPS.bat  START_CROSSTAB_APP.bat  TERMINATION_BUILDER_SUMMARY.md  TEST_DASHBOARD.md  add_logic_equation_field.sql  app.py  banner_clean_migration.sql  banner_cleanup_script.sql  banner_constraint_fix.sql  banner_h1_h2_migration.sql  banner_migration_clean.sql  banner_migration_fix.sql  banner_optimization_indexes.sql  banner_question_id_migration.sql  banner_rebuild_schema.sql  banner_schema_fix.sql  banners.md  create_project_templates_table.sql  extract_docx.py  optimal_banner_schema.sql  package-lock.json  package.json  requirements.txt  run_migration.js  start-app.bat  (+3 more)
Qre imports/: Infuse Import.json
backend/: generate_questionnaire.py  generate_tab_plan.py  generate_tab_plan_infer_likert.py  generate_tab_plan_min.py  tabplan_writer.py  validate_schema.py
examples/: project.json  qgen_schema.json  sample_project.json
infra/: schema.sql
scripts/: dev.ps1
services/ai-agent/: .env.example  EMBEDDING_MODELS.md  README.md  pyproject.toml  quick-start.bat  quick-start.sh
services/ai-agent/app/: __init__.py  agent.py  config.py  database.py  llm_client.py  main.py  rag_engine.py  tools.py
services/ai-agent/scripts/: regenerate_embeddings.py  test_setup.py
(+135 files in other folders)
